refactor: comments from PR